Funziona tutto, risultati da migliorare

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -316,7 +316,7 @@
     "# Distribuzione dei nodi tra i veicoli disponibili\n",
     "indice_veicolo = 0\n",
     "for r_attiva in rotte_attive:\n",
-    "    # Trova un veicolo con pacità sufficiente, usando un round-robin per bilanciare\n",
+    "    # Trova un veicolo con capacità sufficiente, usando un round-robin per bilanciare\n",
     "    assegnato = False\n",
     "    for offset in range(len(V)):\n",
     "        k = V[(indice_veicolo + offset)%len(V)]\n",
@@ -370,7 +370,7 @@
     "for i in range(len(N)):\n",
     "    for j in range(i+1, len(N)):\n",
     "        if (i,j) in A:\n",
-    "            # Il tempo di percorrenza t precedentemente non era stato calcolato per i nodi\n",
+    "            # Il costo c precedentemente non era stato calcolato per i nodi\n",
     "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
     "                # tali nodi\n",
     "            if i==0 and j==0:                             \n",
@@ -574,6 +574,21 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "b896b87d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funzione helper per contare rotte per veicolo\n",
+    "def conta_rotte_per_veicolo(assegnazione, V):\n",
+    "    conteggio = {k: 0 for k in V}\n",
+    "    for rotta, veicolo in assegnazione.items():\n",
+    "        conteggio[veicolo] += 1\n",
+    "    return conteggio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "1f0c0b1a",
    "metadata": {},
    "outputs": [
@@ -582,62 +597,60 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "4\n",
-      "187\n",
+      "3\n",
+      "186\n",
       "Iterazione 1: Unisco tour [8] e [10]\n",
       "  Saving: 18.00\n",
-      "  Veicolo scelto: 2 (Q=50)\n",
+      "  Veicolo scelto: 4 (Q=25)\n",
       "  Nuovo tour: [8, 10]\n",
       "Numero di rotte attive: 9\n",
       "\n",
       "4\n",
       "4\n",
-      "3\n",
-      "195\n",
-      "Iterazione 2: Unisco tour [1] e [8, 10]\n",
-      "  Saving: 15.00\n",
-      "  Veicolo scelto: 1 (Q=50)\n",
-      "  Nuovo tour: [8, 10, 1]\n",
+      "208\n",
+      "Iterazione 8: Unisco tour [6] e [7]\n",
+      "  Saving: 12.00\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
+      "  Nuovo tour: [6, 7]\n",
       "Numero di rotte attive: 8\n",
       "\n",
-      "3\n",
       "4\n",
       "4\n",
-      "3\n",
-      "198\n",
-      "Iterazione 6: Unisco tour [7] e [8, 10, 1]\n",
-      "  Saving: 13.00\n",
-      "  Veicolo scelto: 1 (Q=50)\n",
-      "  Nuovo tour: [7, 8, 10, 1]\n",
+      "4\n",
+      "4\n",
+      "373\n",
+      "Iterazione 9: Unisco tour [6, 7] e [8, 10]\n",
+      "  Saving: 12.00\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
+      "  Nuovo tour: [8, 10, 6, 7]\n",
       "Numero di rotte attive: 7\n",
       "\n",
-      "4\n",
-      "4\n",
-      "120\n",
-      "Iterazione 25: Unisco tour [2] e [6]\n",
-      "  Saving: 5.00\n",
-      "  Veicolo scelto: 2 (Q=50)\n",
-      "  Nuovo tour: [2, 6]\n",
-      "Numero di rotte attive: 6\n",
-      "\n",
-      "4\n",
       "3\n",
-      "201\n",
-      "Iterazione 28: Unisco tour [4] e [9]\n",
+      "3\n",
+      "172\n",
+      "Iterazione 24: Unisco tour [1] e [9]\n",
       "  Saving: 5.00\n",
       "  Veicolo scelto: 1 (Q=50)\n",
-      "  Nuovo tour: [4, 9]\n",
+      "  Nuovo tour: [1, 9]\n",
+      "Numero di rotte attive: 6\n",
+      "\n",
+      "3\n",
+      "3\n",
+      "188\n",
+      "Iterazione 30: Unisco tour [2] e [4]\n",
+      "  Saving: 4.00\n",
+      "  Veicolo scelto: 4 (Q=25)\n",
+      "  Nuovo tour: [2, 4]\n",
       "Numero di rotte attive: 5\n",
       "\n",
       "4\n",
-      "4\n",
       "3\n",
-      "4\n",
-      "321\n",
-      "Iterazione 30: Unisco tour [2, 6] e [4, 9]\n",
-      "  Saving: 4.00\n",
-      "  Veicolo scelto: 2 (Q=50)\n",
-      "  Nuovo tour: [6, 2, 4, 9]\n",
+      "3\n",
+      "253\n",
+      "Iterazione 31: Unisco tour [1, 9] e [5]\n",
+      "  Saving: 3.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [5, 1, 9]\n",
       "Numero di rotte attive: 4\n",
       "\n"
      ]
@@ -648,6 +661,7 @@
     "# Iterazione sui savings\n",
     "iterazione = 0\n",
     "unioni_effettuate = 0\n",
+    "\n",
     "\n",
     "for (i,j),sav_ij in savings:\n",
     "    if sav_ij <= 0:             # I savings <= 0 possono essere esclusi\n",
@@ -670,17 +684,29 @@
     "    if veicolo_i is None or veicolo_j is None:\n",
     "        continue\n",
     "\n",
+    "    # Conta le rotte per veicolo\n",
+    "    conteggio_rotte = conta_rotte_per_veicolo(assegnazione, V)\n",
+    "\n",
     "    # Tentativo di unione\n",
     "    nuova_rotta = unisci_rotte(rotta_i, rotta_j, indice_i, indice_j)\n",
     "\n",
     "\n",
-    "    # Scelta del veicolo con maggiore capacità\n",
-    "    if Q[veicolo_i] >= Q[veicolo_j]:\n",
+    "    if veicolo_i == veicolo_j:\n",
     "        veicolo_scelto = veicolo_i\n",
     "    else:\n",
-    "        veicolo_scelto = veicolo_j\n",
+    "        # Se veicoli diversi, scegli quello con meno rotte\n",
+    "        # o con più capacità se hanno lo stesso numero di rotte\n",
+    "        if conteggio_rotte[veicolo_i] < conteggio_rotte[veicolo_j]:\n",
+    "            veicolo_scelto = veicolo_i\n",
+    "        elif conteggio_rotte[veicolo_i] > conteggio_rotte[veicolo_j]:\n",
+    "            veicolo_scelto = veicolo_j\n",
+    "        else:\n",
+    "            # Scelta del veicolo con maggiore capacità\n",
+    "            if Q[veicolo_i] >= Q[veicolo_j]:\n",
+    "                veicolo_scelto = veicolo_i\n",
+    "            else:\n",
+    "                veicolo_scelto = veicolo_j\n",
     "\n",
-    " \n",
     "\n",
     "    # Quarto step\n",
     "    if (verifica_capacità(nuova_rotta, d, Q[veicolo_scelto])) and (verifica_finestra(nuova_rotta, t, s, a, b, veicolo_scelto)):\n",
@@ -705,67 +731,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "4be0b8af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================================================================\n",
-      "SOLUZIONE FINALE\n",
-      "======================================================================\n",
-      "Unioni effettuate: 6\n",
-      "Iterazioni totali: 40\n",
-      "\n",
-      "======================================================================\n",
-      "SOLUZIONE FINALE\n",
-      "======================================================================\n",
-      "Unioni effettuate: 6\n",
-      "Iterazioni totali: 40\n",
-      "\n",
-      "======================================================================\n",
-      "SOLUZIONE FINALE\n",
-      "======================================================================\n",
-      "Unioni effettuate: 6\n",
-      "Iterazioni totali: 40\n",
-      "\n",
-      "======================================================================\n",
-      "SOLUZIONE FINALE\n",
-      "======================================================================\n",
-      "Unioni effettuate: 6\n",
-      "Iterazioni totali: 40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Quinto step\n",
     "rotte_per_veicolo = {k: [] for k in V}\n",
     "for rotta, veicolo in assegnazione.items():\n",
-    "    rotte_per_veicolo[veicolo].append(list(rotta))\n",
-    "\n",
-    "    print(f\"\\n{'='*70}\")\n",
-    "    print(\"SOLUZIONE FINALE\")\n",
-    "    print(f\"{'='*70}\")\n",
-    "    print(f\"Unioni effettuate: {unioni_effettuate}\")\n",
-    "    print(f\"Iterazioni totali: {iterazione}\")"
+    "    rotte_per_veicolo[veicolo].append(list(rotta))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "d706f8e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: [[5], [7, 8, 10, 1]], 2: [[6, 2, 4, 9]], 3: [[3]], 4: []}"
+       "{1: [[5, 1, 9]], 2: [[8, 10, 6, 7]], 3: [[3]], 4: [[2, 4]]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,38 +765,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2457a2b2",
+   "execution_count": 22,
+   "id": "1145cc88",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\n",
-      "[7, 8, 10, 1]\n",
-      "Veicolo 2: arco (7,8)\n",
-      "Veicolo 2: arco (8,10)\n",
-      "Veicolo 2: arco (10,1)\n",
-      "[6, 2, 4, 9]\n",
-      "Veicolo 2: arco (6,2)\n",
-      "Veicolo 2: arco (2,4)\n",
-      "Veicolo 2: arco (4,9)\n",
-      "[3]\n",
-      "Costo totale: 41\n"
+      "Rotta: [5, 1, 9]\n",
+      "Veicolo 1: 0, 5 (costo: 2)\n",
+      "Veicolo 1: 5, 1 (costo: 5)\n",
+      "Veicolo 1: 1, 9 (costo: 2)\n",
+      "Veicolo 1: 9,11 (costo: 6)\n",
+      "Rotta: [8, 10, 6, 7]\n",
+      "Veicolo 2: 0, 8 (costo: 11)\n",
+      "Veicolo 2: 8, 10 (costo: 5)\n",
+      "Veicolo 2: 10, 6 (costo: 5)\n",
+      "Veicolo 2: 6, 7 (costo: 2)\n",
+      "Veicolo 2: 7,11 (costo: 2)\n",
+      "Rotta: [3]\n",
+      "Veicolo 3: 0, 3, 11\n",
+      "Rotta: [2, 4]\n",
+      "Veicolo 4: 0, 2 (costo: 5)\n",
+      "Veicolo 4: 2, 4 (costo: 10)\n",
+      "Veicolo 4: 4,11 (costo: 6)\n",
+      "Costo totale: 79\n"
      ]
     }
    ],
    "source": [
     "costo_tot = 0\n",
+    "\n",
     "for veicol, liste_rotte in rotte_per_veicolo.items():\n",
     "    for rot in liste_rotte:\n",
+    "        print(f\"Rotta: {rot}\")\n",
+    "\n",
+    "        # Considero il caso in cui la rotta ha un solo punto vendita\n",
+    "        if len(rot)==1:\n",
+    "            # Sommo i costi tra l'unico nodo e il deposito\n",
+    "            costo_tot += c[0, rot[0]]\n",
+    "            costo_tot += c[rot[0], n+1]\n",
+    "            print(f\"Veicolo {veicol}: 0, {rot[0]}, {n+1}\")\n",
+    "        else:\n",
+    "            # Calcolo il costo del nodo iniziale\n",
+    "            costo_tot += c[0, rot[0]]\n",
+    "            print(f\"Veicolo {veicol}: 0, {rot[0]} (costo: {c[0,rot[0]]})\")\n",
+    "\n",
+    "            # Calcolo i costi tra i nodi della rotta\n",
+    "            for nodo in range(len(rot)-1):\n",
+    "                i,j = rot[nodo], rot[nodo+1]\n",
+    "                costo_tot += c[i,j]\n",
+    "                print(f\"Veicolo {veicol}: {i}, {j} (costo: {c[i,j]})\")\n",
+    "\n",
+    "            # Calcolo il costo del nodo finale\n",
+    "            costo_tot += c[rot[-1], n+1]\n",
+    "            print(f\"Veicolo {veicol}: {rot[-1]},{n+1} (costo: {c[rot[-1],n+1]})\")\n",
+    "\n",
+    "print(f\"Costo totale: {costo_tot}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "11eb633b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 1, 9]\n",
+      "Veicolo 1: arco (5,1)\n",
+      "Veicolo 1: arco (1,9)\n",
+      "Veicolo 1 rispetta il vincolo di capacità di 50, con domanda totale pari a 27\n",
+      "[8, 10, 6, 7]\n",
+      "Veicolo 1: arco (8,10)\n",
+      "Veicolo 1: arco (10,6)\n",
+      "Veicolo 1: arco (6,7)\n",
+      "Veicolo 2 rispetta il vincolo di capacità di 50, con domanda totale pari a 33\n",
+      "[3]\n",
+      "Veicolo 3 rispetta il vincolo di capacità di 25, con domanda totale pari a 0\n",
+      "[2, 4]\n",
+      "Veicolo 1: arco (2,4)\n",
+      "Veicolo 4 rispetta il vincolo di capacità di 25, con domanda totale pari a 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for veicol, liste_rotte in rotte_per_veicolo.items():\n",
+    "    for rot in liste_rotte:\n",
+    "        costo_rotta = 0\n",
+    "        domanda_rotta = 0\n",
     "        print(rot)\n",
     "        for nodo in range(len(rot)-1):\n",
     "            i,j = rot[nodo], rot[nodo+1]\n",
     "            print(f\"Veicolo {veicolo}: arco ({i},{j})\")\n",
-    "            costo_tot += c[i,j]\n",
-    "print(f\"Costo totale: {costo_tot}\")"
+    "            costo_rotta += c[i,j]\n",
+    "            domanda_rotta += d[i]\n",
+    "        \n",
+    "        if costo_rotta <= Q[veicol]:\n",
+    "            print(f\"Veicolo {veicol} rispetta il vincolo di capacità di {Q[veicol]}, con domanda totale pari a {domanda_rotta}\")"
    ]
   }
  ],
