Aggiustato la formula del saving

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5767917f",
    "metadata": {},
    "outputs": [],
@@ -375,17 +375,17 @@
     "            if i==0 and j==0:                             \n",
     "                sav = 0\n",
     "            elif i==0:\n",
-    "                sav = c[0,j] - c[i,j]\n",
+    "                sav = c[j,n+1] - c[i,j]\n",
     "            elif j==0:\n",
     "                sav = c[0,i] - c[i,j]\n",
     "            elif i==n+1 and j==n+1:                   \n",
     "                sav = 0\n",
     "            elif i==n+1:\n",
-    "                sav = c[0,j] - c[i,j]\n",
+    "                sav = c[j,n+1] - c[i,j]\n",
     "            elif j==n+1:\n",
     "                sav = c[0,i] - c[i,j]\n",
     "            else:\n",
-    "                sav =c[0,i] + c[0,j] - c[i,j]\n",
+    "                sav =c[0,i] + c[j,n+1] - c[i,j]\n",
     "            savings.append(((N[i], N[j]), sav))"
    ]
   },
@@ -398,69 +398,69 @@
     {
      "data": {
       "text/plain": [
-       "[((0, 1), 0),\n",
-       " ((0, 2), 0),\n",
-       " ((0, 3), 0),\n",
-       " ((0, 4), 0),\n",
-       " ((0, 5), 0),\n",
-       " ((0, 6), 0),\n",
-       " ((0, 7), 0),\n",
-       " ((0, 8), 0),\n",
-       " ((0, 9), 0),\n",
-       " ((0, 10), 0),\n",
-       " ((1, 2), 1),\n",
-       " ((1, 3), 5),\n",
-       " ((1, 4), 1),\n",
-       " ((1, 5), 3),\n",
-       " ((1, 6), -1),\n",
-       " ((1, 7), 2),\n",
-       " ((1, 8), 12),\n",
-       " ((1, 9), 5),\n",
-       " ((1, 10), 15),\n",
+       "[((0, 1), 1),\n",
+       " ((0, 2), 5),\n",
+       " ((0, 3), 8),\n",
+       " ((0, 4), -3),\n",
+       " ((0, 5), 5),\n",
+       " ((0, 6), 1),\n",
+       " ((0, 7), -9),\n",
+       " ((0, 8), 2),\n",
+       " ((0, 9), 4),\n",
+       " ((0, 10), -10),\n",
+       " ((1, 2), 6),\n",
+       " ((1, 3), 13),\n",
+       " ((1, 4), -2),\n",
+       " ((1, 5), 8),\n",
+       " ((1, 6), 0),\n",
+       " ((1, 7), -7),\n",
+       " ((1, 8), 14),\n",
+       " ((1, 9), 9),\n",
+       " ((1, 10), 5),\n",
        " ((1, 11), -1),\n",
-       " ((2, 3), 2),\n",
-       " ((2, 4), 4),\n",
-       " ((2, 5), 1),\n",
-       " ((2, 6), 5),\n",
-       " ((2, 7), 10),\n",
-       " ((2, 8), 5),\n",
-       " ((2, 9), -5),\n",
-       " ((2, 10), 5),\n",
+       " ((2, 3), 10),\n",
+       " ((2, 4), 1),\n",
+       " ((2, 5), 6),\n",
+       " ((2, 6), 6),\n",
+       " ((2, 7), 1),\n",
+       " ((2, 8), 7),\n",
+       " ((2, 9), -1),\n",
+       " ((2, 10), -5),\n",
        " ((2, 11), -5),\n",
-       " ((3, 4), 3),\n",
-       " ((3, 5), -4),\n",
-       " ((3, 6), 3),\n",
-       " ((3, 7), 8),\n",
-       " ((3, 8), 7),\n",
-       " ((3, 9), -6),\n",
-       " ((3, 10), 13),\n",
+       " ((3, 4), 0),\n",
+       " ((3, 5), 1),\n",
+       " ((3, 6), 4),\n",
+       " ((3, 7), -1),\n",
+       " ((3, 8), 9),\n",
+       " ((3, 9), -2),\n",
+       " ((3, 10), 3),\n",
        " ((3, 11), -8),\n",
-       " ((4, 5), 0),\n",
-       " ((4, 6), 0),\n",
-       " ((4, 7), 14),\n",
-       " ((4, 8), 7),\n",
-       " ((4, 9), 5),\n",
-       " ((4, 10), 13),\n",
+       " ((4, 5), 5),\n",
+       " ((4, 6), 1),\n",
+       " ((4, 7), 5),\n",
+       " ((4, 8), 9),\n",
+       " ((4, 9), 9),\n",
+       " ((4, 10), 3),\n",
        " ((4, 11), 3),\n",
-       " ((5, 6), -5),\n",
-       " ((5, 7), 7),\n",
-       " ((5, 8), 8),\n",
-       " ((5, 9), -8),\n",
-       " ((5, 10), 5),\n",
+       " ((5, 6), -4),\n",
+       " ((5, 7), -2),\n",
+       " ((5, 8), 10),\n",
+       " ((5, 9), -4),\n",
+       " ((5, 10), -5),\n",
        " ((5, 11), -5),\n",
-       " ((6, 7), 12),\n",
-       " ((6, 8), 7),\n",
-       " ((6, 9), 3),\n",
-       " ((6, 10), 12),\n",
+       " ((6, 7), 3),\n",
+       " ((6, 8), 9),\n",
+       " ((6, 9), 7),\n",
+       " ((6, 10), 2),\n",
        " ((6, 11), -1),\n",
-       " ((7, 8), 13),\n",
-       " ((7, 9), 6),\n",
-       " ((7, 10), 12),\n",
+       " ((7, 8), 15),\n",
+       " ((7, 9), 10),\n",
+       " ((7, 10), 2),\n",
        " ((7, 11), 9),\n",
-       " ((8, 9), 9),\n",
-       " ((8, 10), 18),\n",
+       " ((8, 9), 13),\n",
+       " ((8, 10), 8),\n",
        " ((8, 11), -2),\n",
-       " ((9, 10), 11),\n",
+       " ((9, 10), 1),\n",
        " ((9, 11), -4),\n",
        " ((10, 11), 10)]"
       ]
@@ -494,71 +494,71 @@
     {
      "data": {
       "text/plain": [
-       "[((8, 10), 18),\n",
-       " ((1, 10), 15),\n",
-       " ((4, 7), 14),\n",
-       " ((3, 10), 13),\n",
-       " ((4, 10), 13),\n",
-       " ((7, 8), 13),\n",
-       " ((1, 8), 12),\n",
-       " ((6, 7), 12),\n",
-       " ((6, 10), 12),\n",
-       " ((7, 10), 12),\n",
-       " ((9, 10), 11),\n",
-       " ((2, 7), 10),\n",
+       "[((7, 8), 15),\n",
+       " ((1, 8), 14),\n",
+       " ((1, 3), 13),\n",
+       " ((8, 9), 13),\n",
+       " ((2, 3), 10),\n",
+       " ((5, 8), 10),\n",
+       " ((7, 9), 10),\n",
        " ((10, 11), 10),\n",
+       " ((1, 9), 9),\n",
+       " ((3, 8), 9),\n",
+       " ((4, 8), 9),\n",
+       " ((4, 9), 9),\n",
+       " ((6, 8), 9),\n",
        " ((7, 11), 9),\n",
-       " ((8, 9), 9),\n",
-       " ((3, 7), 8),\n",
-       " ((5, 8), 8),\n",
-       " ((3, 8), 7),\n",
-       " ((4, 8), 7),\n",
-       " ((5, 7), 7),\n",
-       " ((6, 8), 7),\n",
-       " ((7, 9), 6),\n",
-       " ((1, 3), 5),\n",
-       " ((1, 9), 5),\n",
-       " ((2, 6), 5),\n",
-       " ((2, 8), 5),\n",
-       " ((2, 10), 5),\n",
-       " ((4, 9), 5),\n",
-       " ((5, 10), 5),\n",
-       " ((2, 4), 4),\n",
-       " ((1, 5), 3),\n",
-       " ((3, 4), 3),\n",
-       " ((3, 6), 3),\n",
+       " ((0, 3), 8),\n",
+       " ((1, 5), 8),\n",
+       " ((8, 10), 8),\n",
+       " ((2, 8), 7),\n",
+       " ((6, 9), 7),\n",
+       " ((1, 2), 6),\n",
+       " ((2, 5), 6),\n",
+       " ((2, 6), 6),\n",
+       " ((0, 2), 5),\n",
+       " ((0, 5), 5),\n",
+       " ((1, 10), 5),\n",
+       " ((4, 5), 5),\n",
+       " ((4, 7), 5),\n",
+       " ((0, 9), 4),\n",
+       " ((3, 6), 4),\n",
+       " ((3, 10), 3),\n",
+       " ((4, 10), 3),\n",
        " ((4, 11), 3),\n",
-       " ((6, 9), 3),\n",
-       " ((1, 7), 2),\n",
-       " ((2, 3), 2),\n",
-       " ((1, 2), 1),\n",
-       " ((1, 4), 1),\n",
-       " ((2, 5), 1),\n",
-       " ((0, 1), 0),\n",
-       " ((0, 2), 0),\n",
-       " ((0, 3), 0),\n",
-       " ((0, 4), 0),\n",
-       " ((0, 5), 0),\n",
-       " ((0, 6), 0),\n",
-       " ((0, 7), 0),\n",
-       " ((0, 8), 0),\n",
-       " ((0, 9), 0),\n",
-       " ((0, 10), 0),\n",
-       " ((4, 5), 0),\n",
-       " ((4, 6), 0),\n",
-       " ((1, 6), -1),\n",
+       " ((6, 7), 3),\n",
+       " ((0, 8), 2),\n",
+       " ((6, 10), 2),\n",
+       " ((7, 10), 2),\n",
+       " ((0, 1), 1),\n",
+       " ((0, 6), 1),\n",
+       " ((2, 4), 1),\n",
+       " ((2, 7), 1),\n",
+       " ((3, 5), 1),\n",
+       " ((4, 6), 1),\n",
+       " ((9, 10), 1),\n",
+       " ((1, 6), 0),\n",
+       " ((3, 4), 0),\n",
        " ((1, 11), -1),\n",
+       " ((2, 9), -1),\n",
+       " ((3, 7), -1),\n",
        " ((6, 11), -1),\n",
+       " ((1, 4), -2),\n",
+       " ((3, 9), -2),\n",
+       " ((5, 7), -2),\n",
        " ((8, 11), -2),\n",
-       " ((3, 5), -4),\n",
+       " ((0, 4), -3),\n",
+       " ((5, 6), -4),\n",
+       " ((5, 9), -4),\n",
        " ((9, 11), -4),\n",
-       " ((2, 9), -5),\n",
+       " ((2, 10), -5),\n",
        " ((2, 11), -5),\n",
-       " ((5, 6), -5),\n",
+       " ((5, 10), -5),\n",
        " ((5, 11), -5),\n",
-       " ((3, 9), -6),\n",
+       " ((1, 7), -7),\n",
        " ((3, 11), -8),\n",
-       " ((5, 9), -8)]"
+       " ((0, 7), -9),\n",
+       " ((0, 10), -10)]"
       ]
      },
      "execution_count": 17,
@@ -595,61 +595,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
       "3\n",
-      "186\n",
-      "Iterazione 1: Unisco tour [8] e [10]\n",
-      "  Saving: 18.00\n",
-      "  Veicolo scelto: 4 (Q=25)\n",
-      "  Nuovo tour: [8, 10]\n",
+      "4\n",
+      "185\n",
+      "Iterazione 1: Unisco tour [7] e [8]\n",
+      "  Saving: 15.00\n",
+      "  Veicolo scelto: 3 (Q=25)\n",
+      "  Nuovo tour: [7, 8]\n",
       "Numero di rotte attive: 9\n",
       "\n",
       "4\n",
       "4\n",
-      "208\n",
-      "Iterazione 8: Unisco tour [6] e [7]\n",
-      "  Saving: 12.00\n",
-      "  Veicolo scelto: 2 (Q=50)\n",
-      "  Nuovo tour: [6, 7]\n",
+      "180\n",
+      "Iterazione 5: Unisco tour [2] e [3]\n",
+      "  Saving: 10.00\n",
+      "  Veicolo scelto: 3 (Q=25)\n",
+      "  Nuovo tour: [2, 3]\n",
       "Numero di rotte attive: 8\n",
-      "\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "373\n",
-      "Iterazione 9: Unisco tour [6, 7] e [8, 10]\n",
-      "  Saving: 12.00\n",
-      "  Veicolo scelto: 2 (Q=50)\n",
-      "  Nuovo tour: [8, 10, 6, 7]\n",
-      "Numero di rotte attive: 7\n",
       "\n",
       "3\n",
       "3\n",
       "172\n",
-      "Iterazione 24: Unisco tour [1] e [9]\n",
-      "  Saving: 5.00\n",
+      "Iterazione 9: Unisco tour [1] e [9]\n",
+      "  Saving: 9.00\n",
       "  Veicolo scelto: 1 (Q=50)\n",
       "  Nuovo tour: [1, 9]\n",
-      "Numero di rotte attive: 6\n",
+      "Numero di rotte attive: 7\n",
       "\n",
-      "3\n",
-      "3\n",
-      "188\n",
-      "Iterazione 30: Unisco tour [2] e [4]\n",
-      "  Saving: 4.00\n",
-      "  Veicolo scelto: 4 (Q=25)\n",
-      "  Nuovo tour: [2, 4]\n",
-      "Numero di rotte attive: 5\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "243\n",
+      "Iterazione 13: Unisco tour [6] e [7, 8]\n",
+      "  Saving: 9.00\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
+      "  Nuovo tour: [7, 8, 6]\n",
+      "Numero di rotte attive: 6\n",
       "\n",
       "4\n",
       "3\n",
       "3\n",
       "253\n",
-      "Iterazione 31: Unisco tour [1, 9] e [5]\n",
-      "  Saving: 3.00\n",
+      "Iterazione 16: Unisco tour [1, 9] e [5]\n",
+      "  Saving: 8.00\n",
       "  Veicolo scelto: 1 (Q=50)\n",
       "  Nuovo tour: [5, 1, 9]\n",
+      "Numero di rotte attive: 5\n",
+      "\n",
+      "3\n",
+      "3\n",
+      "213\n",
+      "Iterazione 31: Unisco tour [4] e [10]\n",
+      "  Saving: 3.00\n",
+      "  Veicolo scelto: 4 (Q=25)\n",
+      "  Nuovo tour: [4, 10]\n",
       "Numero di rotte attive: 4\n",
       "\n"
      ]
@@ -750,7 +749,7 @@
     {
      "data": {
       "text/plain": [
-       "{1: [[5, 1, 9]], 2: [[8, 10, 6, 7]], 3: [[3]], 4: [[2, 4]]}"
+       "{1: [[5, 1, 9]], 2: [[7, 8, 6]], 3: [[2, 3]], 4: [[4, 10]]}"
       ]
      },
      "execution_count": 21,
@@ -777,19 +776,20 @@
       "Veicolo 1: 5, 1 (costo: 5)\n",
       "Veicolo 1: 1, 9 (costo: 2)\n",
       "Veicolo 1: 9,11 (costo: 6)\n",
-      "Rotta: [8, 10, 6, 7]\n",
-      "Veicolo 2: 0, 8 (costo: 11)\n",
-      "Veicolo 2: 8, 10 (costo: 5)\n",
-      "Veicolo 2: 10, 6 (costo: 5)\n",
-      "Veicolo 2: 6, 7 (costo: 2)\n",
-      "Veicolo 2: 7,11 (costo: 2)\n",
-      "Rotta: [3]\n",
-      "Veicolo 3: 0, 3, 11\n",
-      "Rotta: [2, 4]\n",
-      "Veicolo 4: 0, 2 (costo: 5)\n",
-      "Veicolo 4: 2, 4 (costo: 10)\n",
-      "Veicolo 4: 4,11 (costo: 6)\n",
-      "Costo totale: 79\n"
+      "Rotta: [7, 8, 6]\n",
+      "Veicolo 2: 0, 7 (costo: 11)\n",
+      "Veicolo 2: 7, 8 (costo: 9)\n",
+      "Veicolo 2: 8, 6 (costo: 4)\n",
+      "Veicolo 2: 6,11 (costo: 4)\n",
+      "Rotta: [2, 3]\n",
+      "Veicolo 3: 0, 2 (costo: 5)\n",
+      "Veicolo 3: 2, 3 (costo: 8)\n",
+      "Veicolo 3: 3,11 (costo: 13)\n",
+      "Rotta: [4, 10]\n",
+      "Veicolo 4: 0, 4 (costo: 9)\n",
+      "Veicolo 4: 4, 10 (costo: 8)\n",
+      "Veicolo 4: 10,11 (costo: 2)\n",
+      "Costo totale: 88\n"
      ]
     }
    ],
@@ -835,19 +835,19 @@
      "output_type": "stream",
      "text": [
       "[5, 1, 9]\n",
-      "Veicolo 1: arco (5,1)\n",
-      "Veicolo 1: arco (1,9)\n",
+      "Veicolo 4: arco (5,1)\n",
+      "Veicolo 4: arco (1,9)\n",
       "Veicolo 1 rispetta il vincolo di capacità di 50, con domanda totale pari a 27\n",
-      "[8, 10, 6, 7]\n",
-      "Veicolo 1: arco (8,10)\n",
-      "Veicolo 1: arco (10,6)\n",
-      "Veicolo 1: arco (6,7)\n",
-      "Veicolo 2 rispetta il vincolo di capacità di 50, con domanda totale pari a 33\n",
-      "[3]\n",
-      "Veicolo 3 rispetta il vincolo di capacità di 25, con domanda totale pari a 0\n",
-      "[2, 4]\n",
-      "Veicolo 1: arco (2,4)\n",
-      "Veicolo 4 rispetta il vincolo di capacità di 25, con domanda totale pari a 10\n"
+      "[7, 8, 6]\n",
+      "Veicolo 4: arco (7,8)\n",
+      "Veicolo 4: arco (8,6)\n",
+      "Veicolo 2 rispetta il vincolo di capacità di 50, con domanda totale pari a 25\n",
+      "[2, 3]\n",
+      "Veicolo 4: arco (2,3)\n",
+      "Veicolo 3 rispetta il vincolo di capacità di 25, con domanda totale pari a 10\n",
+      "[4, 10]\n",
+      "Veicolo 4: arco (4,10)\n",
+      "Veicolo 4 rispetta il vincolo di capacità di 25, con domanda totale pari a 13\n"
      ]
     }
    ],
