--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -296,6 +296,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "b896b87d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funzione helper per contare rotte per veicolo\n",
+    "def conta_rotte_per_veicolo(assegnazione, V):\n",
+    "    conteggio = {k: 0 for k in V}\n",
+    "    for rotta, veicolo in assegnazione.items():\n",
+    "        conteggio[veicolo] += 1\n",
+    "    return conteggio"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "7ca43459",
    "metadata": {},
@@ -303,11 +318,6 @@
    "source": [
     "# Primo step\n",
     "# Inizializzazione di ogni punto vendita come rotta separata\n",
-    "rotte = []\n",
-    "for k in V:\n",
-    "    rotte = {k: [] for k in V}\n",
-    "\n",
-    "# Inizializzo ogni punto vendita come rotta separata\n",
     "rotte_attive = [[i] for i in P]\n",
     "\n",
     "assegnazione = {}          # Lista di associazione di ogni rotta al veicolo\n",
@@ -572,22 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b896b87d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Funzione helper per contare rotte per veicolo\n",
-    "def conta_rotte_per_veicolo(assegnazione, V):\n",
-    "    conteggio = {k: 0 for k in V}\n",
-    "    for rotta, veicolo in assegnazione.items():\n",
-    "        conteggio[veicolo] += 1\n",
-    "    return conteggio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "1f0c0b1a",
    "metadata": {},
    "outputs": [
@@ -692,7 +687,7 @@
     "    if veicolo_i == veicolo_j:\n",
     "        veicolo_scelto = veicolo_i\n",
     "    else:\n",
-    "        # Se veicoli diversi, scegli quello con meno rotte\n",
+    "        # Se veicoli diversi, viene scelto quello con meno rotte\n",
     "        # o con più capacità se hanno lo stesso numero di rotte\n",
     "        if conteggio_rotte[veicolo_i] < conteggio_rotte[veicolo_j]:\n",
     "            veicolo_scelto = veicolo_i\n",
@@ -707,6 +702,7 @@
     "\n",
     "\n",
     "    # Quarto step\n",
+    "    # Verifica dei vincoli\n",
     "    if (verifica_capacità(nuova_rotta, d, Q[veicolo_scelto])) and (verifica_finestra(nuova_rotta, t, s, a, b, veicolo_scelto)):\n",
     "        print(f\"Iterazione {iterazione}: Unisco tour {rotta_i} e {rotta_j}\")\n",
     "        print(f\"  Saving: {sav_ij:.2f}\")\n",
@@ -869,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "cab1c50e",
    "metadata": {},
    "outputs": [
