--- a/AOCR_Algoritmo_esatto.ipynb
+++ b/AOCR_Algoritmo_esatto.ipynb
@@ -30,7 +30,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pulp in c:\\users\\dmdav\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (3.3.0)\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         },
@@ -41,6 +40,13 @@
             "\n",
             "[notice] A new release of pip is available: 23.0.1 -> 25.2\n",
             "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: pulp in c:\\users\\dmdav\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (3.3.0)\n"
           ]
         }
       ],
