Fatto esempio con 50 clienti e finito pdf

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0b10b7f8",
    "metadata": {},
    "outputs": [
@@ -718,11 +718,16 @@
     "                assegnazione[tuple(nuova_rotta)] = veicolo\n",
     "\n",
     "\n",
-    "rotte_per_veicolo = {k: [] for k in V}\n",
-    "for rotta, veicolo in assegnazione.items():\n",
-    "    rotte_per_veicolo[veicolo].append(list(rotta))\n",
+    "# Si controlla se è possibile avere una soluzione\n",
+    "veicoli_con_piu_rotte = [v for v, r in rotte_per_veicolo.items() if len(r) > 1]\n",
+    "if veicoli_con_piu_rotte:\n",
+    "    print(\"Non riesco a trovare una soluzione, troppe rotte\")\n",
+    "else:\n",
+    "    rotte_per_veicolo = {k: [] for k in V}\n",
+    "    for rotta, veicolo in assegnazione.items():\n",
+    "        rotte_per_veicolo[veicolo].append(list(rotta))\n",
     "\n",
-    "rotte_per_veicolo"
+    "    print(rotte_per_veicolo)"
    ]
   },
   {
