Un pò di pulizia

--- a/AOCR_Algoritmo_euristico_50.ipynb
+++ b/AOCR_Algoritmo_euristico_50.ipynb
@@ -2601,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "0b10b7f8",
    "metadata": {},
    "outputs": [
@@ -2620,7 +2620,7 @@
     "#   precedentemente fissati. Di conseguenz, per risolvere questo problema, abbiamo deciso di effettuare un ulteriore controllo,\n",
     "#   seguendo le seguenti logiche\n",
     "#       1. Se uno dei veicoli ha più di una rotta e un veicolo ha una sola rotta, assegno una delle 2 rotte al veicolo con 0 rotte\n",
-    "#       2. se uno dei veicoli ha più di una rotta e gli altri veicoli hanno tutti almeno una rotta, unisco le rotte di quel veicolo\n",
+    "#       2. Se uno dei veicoli ha più di una rotta e gli altri veicoli hanno tutti almeno una rotta, unisco le rotte di quel veicolo\n",
     "\n",
     "# Punto 1\n",
     "# Controllo quali veicoli hanno più di una rotta e quali hanno 0 rotte\n",
@@ -2649,13 +2649,6 @@
     "\n",
     "            # Unione delle rotte\n",
     "            nuova_rotta = rotta_attuale + rotta_successiva\n",
-    "\n",
-    "            if not verifica_capacità(nuova_rotta, d, Q[veicolo]):\n",
-    "                print(\"Zompato\")\n",
-    "                print(rotte[i])\n",
-    "                                     \n",
-    "            if not verifica_finestra(nuova_rotta, t, s, a, b, veicolo):\n",
-    "                print(\"Zumpi\")\n",
     "\n",
     "            # Controllo dei vincoli\n",
     "            if (verifica_capacità(nuova_rotta, d, Q[veicolo]) and verifica_finestra(nuova_rotta, t, s, a, b, veicolo)):\n",
