Aggiustato commento e pdf

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "13321604",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
     "    for j in range(i+1, len(N)):\n",
     "        if (i,j) in A:\n",
     "            # Il costo c precedentemente non era stato calcolato per i nodi\n",
-    "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
+    "                # (0,0), (0,n+1), (n+1,0) e (n+1,n+1). Di conseguenza è stato necessario escludere \n",
     "                # tali nodi\n",
     "            if i==0 and j==0:                             \n",
     "                sav = 0\n",
