--- a/AOCR_Algoritmo_euristico_50.ipynb
+++ b/AOCR_Algoritmo_euristico_50.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "13321604",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
     "    for j in range(i+1, len(N)):\n",
     "        if (i,j) in A:\n",
     "            # Il costo c precedentemente non era stato calcolato per i nodi\n",
-    "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
+    "                # (0,0), (0,n+1), (n+1,0) e (n+1,n+1). Di conseguenza è stato necessario escludere \n",
     "                # tali nodi\n",
     "            if i==0 and j==0:                             \n",
     "                sav = 0\n",
@@ -2601,18 +2601,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0b10b7f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: [[1, 9, 3]], 2: [[25, 35, 22, 34, 20, 48, 24, 30]], 3: [], 4: [[11, 14, 5, 46, 18, 33]], 5: [], 6: [[42, 45, 6, 36, 12, 23]], 7: [[19, 7, 2, 4, 43, 10, 27]], 8: [[32, 26, 38, 44, 16]], 9: [[8, 49, 17, 28, 47, 21, 39]], 10: [[40, 50, 37, 41, 13, 29, 31, 15]]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Controllo posteriore del numero di rotte per ogni veicolo\n",
     "# Nonostante le prevenzioni attuate precedentemente (al momento dell'assegnazione delle rotte ai veicoli),\n",
@@ -2670,9 +2662,37 @@
     "else:\n",
     "    rotte_per_veicolo = {k: [] for k in V}\n",
     "    for rotta, veicolo in assegnazione.items():\n",
-    "        rotte_per_veicolo[veicolo].append(list(rotta))\n",
-    "\n",
-    "    print(rotte_per_veicolo)"
+    "        rotte_per_veicolo[veicolo].append(list(rotta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "550a1149",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [[1, 9, 3]],\n",
+       " 2: [[25, 35, 22, 34, 20, 48, 24, 30]],\n",
+       " 3: [],\n",
+       " 4: [[11, 14, 5, 46, 18, 33]],\n",
+       " 5: [],\n",
+       " 6: [[42, 45, 6, 36, 12, 23]],\n",
+       " 7: [[19, 7, 2, 4, 43, 10, 27]],\n",
+       " 8: [[32, 26, 38, 44, 16]],\n",
+       " 9: [[8, 49, 17, 28, 47, 21, 39]],\n",
+       " 10: [[40, 50, 37, 41, 13, 29, 31, 15]]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rotte_per_veicolo"
    ]
   },
   {
@@ -2875,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "cab1c50e",
    "metadata": {},
    "outputs": [
