Ennesimo aggiornamento pdf

--- a/AOCR_Algoritmo_TabuSearch.ipynb
+++ b/AOCR_Algoritmo_TabuSearch.ipynb
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "oD5u6bFFVvQ8"
       },
@@ -108,7 +108,6 @@
         "\n",
         "# Verifica del vincolo di capacità\n",
         "def verifica_capacità (rotta, d, capacità):\n",
-        "    \"\"\"Calcola la domanda totale della rotta e verifica se eccede la capacità massima del veicolo.\"\"\"\n",
         "    domanda_totale = 0\n",
         "    # Scorre tutti i clienti nella rotta\n",
         "    for i in rotta:\n",
@@ -119,14 +118,13 @@
         "\n",
         "# Verifica del vincolo sulla finestra temporale\n",
         "def verifica_finestra (rotta, t, s, a, b, veicolo_id):\n",
-        "    \"\"\"Verifica che ogni cliente nella rotta sia servito all'interno della sua finestra temporale [a, b].\"\"\"\n",
         "\n",
-        "    n_plus_1 = len(P) + 1 # P è la lista globale dei clienti. Questo è l'indice del deposito di arrivo ('t').\n",
-        "    tempo_corrente = 0    # Tempo di arrivo al nodo corrente. Inizia a 0 (partenza da 's').\n",
-        "    nodo_precedente = 0   # Deposito di partenza (s)\n",
+        "    n_plus_1 = len(P) + 1 # P è la lista globale dei clienti. Questo è l'indice del deposito di arrivo 't'\n",
+        "    tempo_corrente = 0    # Tempo di arrivo al nodo corrente. Inizia d 0 (partenza da 's')\n",
+        "    nodo_precedente = 0   # Deposito di partenza 's'\n",
         "\n",
         "    for i in rotta:\n",
-        "        # Aggiornamento tempo di viaggio: aggiunge il tempo di percorrenza dall'ultimo nodo visitato.\n",
+        "        # Aggiornamento tempo di viaggio: aggiunge il tempo di percorrenza dall'ultimo nodo visitato\n",
         "        tempo_corrente += t.get((nodo_precedente, i), MAX_COST)\n",
         "        # Se il costo di viaggio è MAX_COST (arco inesistente o vincolo irrealizzabile), la rotta non è ammissibile.\n",
         "        if tempo_corrente >= MAX_COST: return False\n",
